# sar-parser

./: Cargo.toml  LICENSE  README.md
sar-cli/: Cargo.toml  README.md
sar-cli/src/: main.rs
sar-core/: Cargo.toml  README.md
sar-core/examples/: parse.rs  result.txt
sar-core/src/: lib.rs  test.rs
sar-core/src/core/: mod.rs  result.rs  sa.rs  symbol.rs
sar-core/src/parser/: decode.rs  inner.rs  mod.rs  payload.rs
sar-core/src/renderer/: draw.rs  mod.rs  resource.rs  transform.rs
sar-parser/: Cargo.toml
sar-parser-core/: Cargo.toml  result.txt
sar-parser-core/src/: core.rs  decode.rs  lib.rs  parser.rs  result.rs  test.rs
sar-parser-core/src/core/: mod.rs  sa.rs
sar-parser-core/src/parser/: decode.rs  inner.rs  mod.rs  payload.rs
sar-parser/examples/: parse.rs
sar-parser/src/: lib.rs  test.rs
sar-parser/src/core/: result.rs  sa.rs  symbol.rs
sar-parser/src/parser/: inner.rs
sar-parser/src/renderer/: resource.rs
