[workspace]
members = ["sar-cli", "sar-core"]
resolver = "2"

package.edition = "2024"
package.license = "MIT"
package.version = "0.1.0"
package.authors = [
  "shusann01116 <26602565+shusann01116@users.noreply.github.com>",
]
package.homepage = "https://github.com/shusann01116/sar-rs"
package.repository = "https://github.com/shusann01116/sar-rs"
package.readme = "README.md"
package.keywords = ["sar", "pso2"]
package.exclude = ["fixture/*"]

[workspace.dependencies]
ages-prs = "=0.1.0"
blowfish = "=0.9.1"
thiserror = "=2.0.12"
image = "=0.25.6"
imageproc = "=0.25.0"
clap = { version = "=4.5.37", features = ["derive"] }
rayon = "=1.10.0"
anyhow = "=1.0.98"
tokio-stream = { version = "=0.1.17", features = ["fs"] }
tokio = { version = "=1.44.2", features = ["rt-multi-thread", "fs", "macros"] }
