[package]
name = "sar-cli"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
image.workspace = true
sar-core = { path = "../sar-core" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
