[package]
name = "sar-cli"
description = "A CLI tool for SymbolArt (SAR) files from Phantasy Star Online 2."
license.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
edition.workspace = true

[dependencies]
sar-core = { path = "../sar-core", version = "0.1.1" }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
image.workspace = true
tokio = { workspace = true }
tokio-stream = { workspace = true }
