[package]
name = "sar-core"
edition.workspace = true
description = "A Rust library for parsing and rendering SymbolArt (SAR) files from Phantasy Star Online 2."
license.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
ages-prs = { workspace = true }
blowfish = { workspace = true }
image = { workspace = true }
thiserror = { workspace = true }
imageproc = { workspace = true }
rayon = { workspace = true }

[[example]]
name = "parse"
