[package]
name = "sar-core"
description = "A Rust library for parsing and rendering SymbolArt (SAR) files from Phantasy Star Online 2."
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
ages-prs = { workspace = true }
blowfish = { workspace = true }
image = { workspace = true }
thiserror = { workspace = true }
imageproc = { workspace = true }
rayon = { workspace = true }

[[example]]
name = "parse"
